# anthropic-in-a-shell

./: .gitignore  Cargo.toml  README.md  install.sh  setup.sh  uninstall.sh
hello-ratatui/: Cargo.toml  LICENSE  README.md
hello-ratatui/src/: main.rs
json/: response.json
llm/: README.md
llm-interaction/: Cargo.toml
llm-interaction/src/: api.rs  config.rs  model_registry.rs  tui.rs
llm/src/: main.rs  modules.rs
py_agent/: cli_llm.ipynb  context_manager.py  llm_interface.py  main.py  requirements.txt  sumerizers.py  token_colorizer.py
rag/: docker-compose.yml  requirements.txt
src/: main.rs  modules.rs
tools/hello-tool/: Cargo.toml
tools/scrape-tool/: README.md  requirements.txt
tools/tokenripper/: build.sh  install_tokenripper.sh  lftp-scrape.py  setup.py
tools/tokenripper/ripped_tokens/: lftp-man.txt
tools/tokenripper/tokenripper/: tokenripper.py
