[package]
name = "agent"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
futures-util = "0.3"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
dirs = "5.0"
clap = { version = "4.0", features = ["derive"] }
crossterm = "0.28.1"
console = "0.15.11"
dialoguer = "0.11.0"
uuid = { version = "1.15.1", features = ["v4"] }
